avance hasta hacer responsive la primera page

--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,20 @@ span{color: rgb(173, 192, 65);}
     text-align: center;
 }
 
+.bienvenido  h2{
+    font-size: 40px;
+}
 .bienvenido  h3{
     margin-top: 20px;
     font-size: x-large;
 }
 
-#carouselExampleIndicators {
-    width: 40%; 
-    margin: 3% auto 10% auto; 
+
+.carrusel{
+    width: 50%;
+    margin: 3% auto 10% auto;
 }
+
 
 .carousel-inner img {
     width: 1000px; 
@@ -65,21 +70,15 @@ span{color: rgb(173, 192, 65);}
     font-size: 20px;
 }
 
-@media screen and (max-widht:500px){
-
-    .servicios div{
-        background-color: blueviolet;
-
-    }
-}
-
-
-
-
-
-
 
 /*contacto*/
+
+.preguntas{text-align: center;
+    margin: 3% auto;
+    width: 50%;
+}
+.accordion-body{ background-color: #dacece;
+}
 
 .comunicarse p{text-align: center;
     font-size: 25px;
@@ -122,10 +121,6 @@ input[type="reset"] {
 }
 
 
-.mapa {
-    text-align: center;
-    margin-bottom: 2%;
-}
 
 /*ofertas*/
 .ofertas {
@@ -161,11 +156,19 @@ display: flex;
     margin-top: 5%;
 }
 
-.calzado div img{
+.nike{
       width: 300px;  
       height: 300px;
      background-color: #bebebe;
      box-shadow: 10px 10px 44px -19px rgba(0,0,0,0.75);
+-webkit-box-shadow: 10px 10px 44px -19px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 44px -19px rgba(0,0,0,0.75);
+}
+.puma{
+   width:100%;
+   height: 100%;
+   background-color: #bebebe;
+   box-shadow: 10px 10px 44px -19px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 44px -19px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 44px -19px rgba(0,0,0,0.75);
 }
@@ -245,20 +248,60 @@ footer {
 
 }
 
-.pie:hover{
-    background-color:  #ffffff;
-}
 
 .footerP{
 font-size: 20px;
 }
 
+@media screen and (max-width: 1000px) {
+    .pie {
+        width: 5%; 
+    }
+
+    .footerP {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .pie {
+        width: 6%; 
+    }
+
+    .footerP {
+        font-size: 15px;
+
+    }
+    .bienvenido{
+        margin-bottom: 30px;
+    }
+
+}
+
+@media screen and (max-width: 450px) {
+    .pie {
+        width: 8%; 
+    }
+}
 
 
+@media screen and (max-width: 350px) {
+    .pie {
+        width: 10%; 
+    }   
+}
+@media screen and (max-width: 985px) {
 
-
-
-
+    
+    .bienvenido  h2{
+        font-size: 30px;
+    }
+    .bienvenido  h3{
+        margin-top: 15px;
+        font-size: 17px;
+        font-weight: bold;
+    }
+}
 
 
 
