--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,16 @@ font-size: 20px;
      .botoncomprarpuma{
         font-size: 14px;
     }
+
+    .ofertas div h2{font-size: 25px;
+    }
+    .ofertas div p{font-size: 17px;}
+    .servicios div {padding: 30px;}
+
+    .carrusel{
+        width: 70%;
+    }
+    
 }
 
 @media screen and (max-width: 991px) {
@@ -364,6 +374,17 @@ font-size: 20px;
             padding: 5px;
             font-size: 12px;
         }
+        @media screen and (max-width: 700px) {
+            .ofertas {
+                flex-direction: column;
+            }
+            .ofertas div {
+                border-radius: 17px;
+                width: 80%;
+                padding: 25px;
+                margin: 2% auto;
+            }
+        }
 
 }
 
@@ -380,8 +401,6 @@ font-size: 20px;
     width: 200px;  
     height: 250px;
 }
-
-
 }
 
 
@@ -398,6 +417,10 @@ font-size: 20px;
         height: 100%; 
 }
 }
+@media screen and (max-width: 290px) {
+    .servicios div h2 {font-size: 18px;}
+    .servicios div p {font-size: 15px;}
+}
 @media screen and (max-width: 985px) {
 
     
@@ -412,7 +435,7 @@ font-size: 20px;
 }
 @media screen and (max-width: 1100px) {
     .grid-container{
-        grid-auto-rows: 1fr 1fr 1fr 1fr;
+        grid-auto-rows: auto;
        grid-template-columns: repeat(3,1fr);
     }
 }
@@ -421,6 +444,9 @@ font-size: 20px;
         grid-auto-rows: auto;
        grid-template-columns: 1fr 1fr;
     }
+    .ofertas div h2{font-size: 22px;
+    }
+    .ofertas div p{font-size: 15px;}
 }
 @media screen and (max-width: 470px) {
     .grid-container{
@@ -432,8 +458,70 @@ font-size: 20px;
         height: 100%; 
 }
 }
-
-
+@media screen and (max-width: 1150px) {
+    .servicios {
+        flex-direction: column;
+        height: 100%;
+    }
+    
+    .servicios div {
+        width: 40%;
+        margin-top: 5%;
+    }
+    
+    .servicios div img {
+        width: 25%;
+    }
+}
+@media screen and (max-width: 900px) {
+    .servicios div img {
+        width: 35%;
+    }
+}
+@media screen and (max-width: 740px) {
+    .servicios div {
+        width: 50%;
+        margin-top: 3%;
+    }
+}
+@media screen and (max-width: 615px) {
+    .servicios div {padding: 20px;}
+    .ofertas div h2{font-size: 25px;}
+    .ofertas div p{font-size: 15px;}
+}
+@media screen and (max-width: 550px) {
+    .servicios div {width: 70%;}
+}
+@media screen and (max-width: 750px) {
+    .carrusel{
+        width: 70%;
+        margin: 5% auto 7% auto;
+    }
+    .carousel-inner img {
+        width: 800px; 
+        height: 400px;  
+    }
+    
+}
+@media screen and (max-width:500px) {
+    .carrusel{
+        width: 80%;
+        margin: 5% auto 10% auto;
+    }
+    .carousel-inner img {
+        width: 600px; 
+        height: 300px;  
+    }
+}
+@media screen and (max-width:340px) {
+    .carrusel{
+        width: 100%;
+    }
+    .carousel-inner img {
+        width: 500px; 
+        height: 250px;  
+    }
+}
 
 
 
